# pmqa

./: .gitignore  README.md  pyproject.toml
agent-handoff/: README.md  architect-review.md  coder-report.md  current-task.md  reviewer-report.md
docs/: Roadmap.md  Vision.md  architecture.md  task-2-validation.md  task-3-architecture.md
examples/product_packs/saucedemo/: .gitignore  README.md  product-pack.json  pyproject.toml
examples/product_packs/saucedemo/bridge/: package-lock.json  package.json  tsconfig.json
examples/product_packs/saucedemo/bridge/src/: capture_backend.ts  fingerprint.ts  main.ts  product_backend.ts  protocol.ts
examples/product_packs/saucedemo/src/pmqa_product_pack_saucedemo/: manifest.py
examples/product_packs/saucedemo/tests/: structural-fingerprint-v1.json  test_manifest.py
pmqa/: __init__.py  cli.py
products/: __init__.py
tests/: test_agent_contracts.py  test_application_contracts.py  test_application_imports.py  test_application_registry.py  test_application_service.py  test_boundary_policy.py  test_copilot_cli.py  test_demo_product.py  test_exploration_models.py  test_langgraph_workflow.py  test_manual_reasoning.py  test_mock_runner.py  test_models.py  test_normalization.py  test_package_imports.py  test_packaging.py  test_product_pack_bridge_protocol.py  test_product_pack_bridge_runner.py  test_product_pack_exploration_tool.py  test_product_pack_external_distribution.py  test_product_pack_imports.py  test_product_pack_loader.py  test_product_pack_manifest.py  test_product_pack_scaffold.py  test_prompt_package.py  (+33 more)
(+98 files in other folders)
