[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pmqa"
version = "0.1.0"
description = "A reusable Product Memory QA framework"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.2,<2",
    "playwright>=1.45,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["pmqa*"]
